# eblint

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/eblint/: linter.py
src/eblint/checkers/: __init__.py  base_checker.py  default_checkers.py  dependency_format_checker.py  field_order_checker.py  forbidden_field_checker.py  last_field_checker.py  mandatory_field_checker.py  violation.py
tests/: test_cli.py  test_linter.py
tests/test_checkers/: test_forbidden_field_checker.py
tests/testfiles/linter/fail/M001/: one-missing-field.eb  two-missing-fields.eb
tests/testfiles/linter/fail/M002/: exchanged-fields.eb
tests/testfiles/linter/fail/M003/: field-before-easyblock.eb  field-before-version.eb  name-version-misordered-easyblock.eb
tests/testfiles/linter/fail/M004/: moduleclass-missing.eb  moduleclass-not-at-end.eb
